# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "goweb 社区项目 API 文档",
-        "title": "goweb API",
+        "description": "ThreadNest 社区讨论项目 API 文档",
+        "title": "ThreadNest API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "sssss61616@gmail.com",
@@ -187,7 +187,7 @@
         },
         "/posts": {
             "get": {
-                "description": "可按size和page分页查询帖子列表",
+                "description": "按发布时间分页查询帖子列表",
                 "consumes": [
                     "application/json"
                 ],
@@ -201,11 +201,52 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页数量",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller._ResponsePostList"
+                        }
+                    }
+                }
+            }
+        },
+        "/posts2": {
+            "get": {
+                "description": "可分页并按发布时间或热度排序，也可按社区过滤",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "帖子"
+                ],
+                "summary": "升级版帖子列表接口",
+                "parameters": [
+                    {
+                        "type": "integer",
                         "description": "可以为空",
                         "name": "community_id",
                         "in": "query"
                     },
                     {
+                        "enum": [
+                            "time",
+                            "score"
+                        ],
                         "type": "string",
                         "example": "score",
                         "description": "排序依据",
@@ -213,6 +254,8 @@
                         "in": "query"
                     },
                     {
+                        "maximum": 1000000,
+                        "minimum": 1,
                         "type": "integer",
                         "example": 1,
                         "description": "页码",
@@ -220,6 +263,8 @@
                         "in": "query"
                     },
                     {
+                        "maximum": 100,
+                        "minimum": 1,
                         "type": "integer",
                         "example": 10,
                         "description": "每页数据量",
@@ -231,7 +276,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller._ResponsePostList"
+                            "$ref": "#/definitions/controller._ResponsePostDetailList"
                         }
                     }
                 }
@@ -356,6 +401,23 @@
                 "msg": {}
             }
         },
+        "controller._ResponsePostDetailList": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "$ref": "#/definitions/controller.ResCode"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ApiPostDetail"
+                    }
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
         "controller._ResponsePostList": {
             "type": "object",
             "properties": {
@@ -376,6 +438,72 @@
                 },
                 "msg": {
                     "description": "提示信息",
+                    "type": "string"
+                }
+            }
+        },
+        "models.ApiPostDetail": {
+            "type": "object",
+            "required": [
+                "community_id",
+                "content",
+                "title"
+            ],
+            "properties": {
+                "author_id": {
+                    "type": "integer"
+                },
+                "author_name": {
+                    "description": "作者",
+                    "type": "string"
+                },
+                "community": {
+                    "description": "嵌入社区信息",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Community"
+                        }
+                    ]
+                },
+                "community_id": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string",
+                    "maxLength": 8192
+                },
+                "create_time": {
+                    "type": "string"
+                },
+                "post_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 128
+                },
+                "vote_num": {
+                    "description": "投票数",
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Community": {
+            "type": "object",
+            "properties": {
+                "community_id": {
+                    "type": "integer"
+                },
+                "community_name": {
+                    "type": "string"
+                },
+                "create_time": {
+                    "type": "string"
+                },
+                "introduction": {
                     "type": "string"
                 }
             }
